空のメッセージが送信できないバリデーションの設定

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,5 +1,5 @@
 <div class="message">
-  <div class="upper-messaeg">
+  <div class="upper-message">
     <div class="messages_user">
       <%= message.user.name %>
     </div>
